修复bug,替换部分国际化

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -29,14 +29,17 @@
   "goodList.tab1.pop3": "Price descending",
   "goodList.tab2": "New arrivals first",
   "goodList.buy": "Go to purchase",
+  "goodIndex.selectTip": "Please select specifications",
   "cart.title": "Cart{count}",
   "cartHeader.title1": "Total",
   "cartHeader.title2": "Item",
   "cartHeader.edit": "Edit",
   "cartHeader.cancel": "Cancel",
   "cart.allSelect": "Select all",
+  "cart.sum": "total",
   "cart.freight": "International shipping fees apply",
   "cart.submit": "Submit",
+  "cart.delete": "delete",
   "cart.submitTip": "Please select product",
   "error.tip": "Oh no, this shouldn't happen. Return to homepage",
   "error.back": "Return to homepage",
@@ -56,13 +59,13 @@
   "addressDetail.default": "Set as default address",
   "addressDetail.submit": "Save",
   "addressDetail.delete.text": "Are you sure you want to delete the address？",
-  "addressDetail.delete.tip": "Prompt",
   "addressDetail.delete.button1": "Cancel",
   "addressDetail.delete.button2": "Confirm",
   "order.index.title": "Confirm Order",
   "order.index.address": "Please Select Shipping Address",
   "order.index.message.title": "Order Remarks",
   "order.index.message.placeholder": "Fill in Order Remarks",
+  "order.index.tag": "default",
   "order.index.total": "Total Amount",
   "order.index.amount": "Total {count} Items",
   "order.index.sum": "Total：",
@@ -72,16 +75,24 @@
   "order.list.sum": "Total {count} Items, Actual Payment:",
   "order.list.button1": "View Details",
   "order.list.button2": "Cancel Order",
-  "order.list.button3": "Continue Payment",
+  "order.list.button3": "Continue to pay",
+  "order.list.button4": "confirm the receipt of goods",
+  "order.list.button5": "buy again",
+  "order.list.button6": "Delete order",
+  "order.confirm.text": "Please confirm receipt only after all packages have arrived.",
+  "order.delete.text": "Are you sure you want to delete the order?",
   "order.detail.title": "Order Details",
   "order.detail.copy": "Copy",
   "order.detail.orderid": "Order Number：",
-  "order.detail.time": "Order Time:",
+  "order.detail.ordertime": "Order time:",
+  "order.detail.paytime": "Payment time:",
+  "order.detail.deliverySn": "Tracking number:",
   "order.detail.sum": "Total Amount",
   "order.detail.required": "Payment Required：",
+  "order.detail.paid": "Paid:",
   "order.detail.button1": "Cancel Order",
   "order.detail.button2": "Continue Payment",
-  "order.cancel.title": "Prompt",
+  "pop.ancel.title": "Prompt",
   "order.cancel.text": "Are you sure you want to cancel the order?",
   "order.cancel.button1": "Cancel",
   "order.cancel.button2": "Confirm",
@@ -106,5 +117,10 @@
   "login.page.username.placeholder": "Please enter your email address",
   "login.page.password": "Password",
   "login.page.password.placeholder": "Please enter your password",
-  "login.page.submit": "Submit"
+  "login.page.code": "Code",
+  "login.page.code.placeholder": "verification code",
+  "login.page.getCode": "Verification code",
+  "login.page.submit": "Submit",
+  "other.finishedText": "No more data available.",
+  "other.loadingText": "loading..."
 }
