--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -30,15 +30,16 @@
   "goodList.tab2": "新品优先",
   "goodList.buy": "去购买",
   "goodIndex.selectTip": "请选择规格",
-  "goodIndex.stockTip": "请选择规格",
   "cart.title": "购物车{count}",
   "cartHeader.title1": "共",
   "cartHeader.title2": "件商品",
   "cartHeader.edit": "编辑",
   "cartHeader.cancel": "取消",
   "cart.allSelect": "全选",
+  "cart.sum": "合计",
   "cart.freight": "国际运费需另计",
   "cart.submit": "去结算",
+  "cart.delete": "删除",
   "cart.submitTip": "请选择商品",
   "error.tip": "哦，不，这不应该发生 返回主页",
   "error.back": "返回主页",
@@ -58,13 +59,13 @@
   "addressDetail.default": "设为默认地址",
   "addressDetail.submit": "保存",
   "addressDetail.delete.text": "确定要删除地址吗？",
-  "addressDetail.delete.tip": "提示",
   "addressDetail.delete.button1": "取消",
   "addressDetail.delete.button2": "确认",
   "order.index.title": "确认订单",
   "order.index.address": "请选择收货地址",
   "order.index.message.title": "订单备注",
   "order.index.message.placeholder": "填写订单备注信息",
+  "order.index.tag": "默认",
   "order.index.total": "商品总金额",
   "order.index.amount": "共{count}件",
   "order.index.sum": "合计：",
@@ -75,15 +76,23 @@
   "order.list.button1": "查看详情",
   "order.list.button2": "取消订单",
   "order.list.button3": "继续支付",
+  "order.list.button4": "确认收货",
+  "order.list.button5": "再次购买",
+  "order.list.button6": "删除订单",
+  "order.confirm.text": "请确认包裹全部到达后再确认收货",
+  "order.delete.text": "确定要删除订单吗?",
   "order.detail.title": "订单详情",
   "order.detail.copy": "复制",
   "order.detail.orderid": "订单号：",
-  "order.detail.time": "下单时间：",
+  "order.detail.ordertime": "下单时间：",
+  "order.detail.paytime": "支付时间：",
+  "order.detail.deliverySn": "快递单号：",
   "order.detail.sum": "商品总额",
   "order.detail.required": "需付款：",
+  "order.detail.paid": "已付款：",
   "order.detail.button1": "取消订单",
   "order.detail.button2": "继续支付",
-  "order.cancel.title": "提示",
+  "pop.ancel.title": "提示",
   "order.cancel.text": "确定要取消订单吗？",
   "order.cancel.button1": "取消",
   "order.cancel.button2": "确定",
@@ -111,10 +120,7 @@
   "login.page.code": "验证码",
   "login.page.code.placeholder": "请输入验证码",
   "login.page.getCode": "验证码",
-  
   "login.page.submit": "提交",
-
-  "other.finishedText":"没有更多数据了",
-  "other.loadingText":"加载中..."
-
+  "other.finishedText": "没有更多数据了",
+  "other.loadingText": "加载中..."
 }
