--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -3,6 +3,7 @@
   "profile.tab2": "收货地址",
   "profile.tab3": "语言设置",
   "profile.tab4": "退出登录",
+  "profile.username": "用户名",
   "order.tab1": "待付款",
   "order.tab2": "待发货",
   "order.tab3": "待收货",
