首页数据缓存化

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -24,7 +24,7 @@
   "goodSpec.tip": "Please select product specifications",
   "good.button1": "Add to cart",
   "good.button2": "Buy now",
-  "goodList.tab1": "Comprehensive recommendations",
+  "goodList.tab1": "Comprehensive",
   "goodList.tab1.pop1": "Comprehensive recommendations",
   "goodList.tab1.pop2": "Price ascending",
   "goodList.tab1.pop3": "Price descending",
