--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -69,27 +69,27 @@
   "order.index.tag": "default",
   "order.index.total": "Total Amount",
   "order.index.amount": "Total {count} Items",
-  "order.index.sum": "Total：",
+  "order.index.sum": "Total:",
   "order.index.submit": "Submit Order",
   "order.list.title": "My Orders",
-  "order.list.id": "Order Number：",
+  "order.list.id": "Order No:",
   "order.list.sum": "Total {count} Items, Actual Payment:",
-  "order.list.button1": "View Details",
-  "order.list.button2": "Cancel Order",
-  "order.list.button3": "Continue to pay",
+  "order.list.button1": "Details",
+  "order.list.button2": "Cancel",
+  "order.list.button3": "To Pay",
   "order.list.button4": "confirm the receipt of goods",
   "order.list.button5": "buy again",
-  "order.list.button6": "Delete order",
+  "order.list.button6": "Delete",
   "order.confirm.text": "Please confirm receipt only after all packages have arrived.",
   "order.delete.text": "Are you sure you want to delete the order?",
   "order.detail.title": "Order Details",
   "order.detail.copy": "Copy",
-  "order.detail.orderid": "Order Number：",
+  "order.detail.orderid": "Order Number:",
   "order.detail.ordertime": "Order time:",
   "order.detail.paytime": "Payment time:",
   "order.detail.deliverySn": "Tracking number:",
   "order.detail.sum": "Total Amount",
-  "order.detail.required": "Payment Required：",
+  "order.detail.required": "Payment Required:",
   "order.detail.paid": "Paid:",
   "order.detail.button1": "Cancel Order",
   "order.detail.button2": "Continue Payment",
@@ -123,5 +123,12 @@
   "login.page.getCode": "Verification code",
   "login.page.submit": "Submit",
   "other.finishedText": "No more data available.",
-  "other.loadingText": "loading..."
+  "other.loadingText": "loading...",
+  "order.status1": "Pending Payment",
+  "order.status2": "Pending Shipment",
+  "order.status3": "Pending Receipt",
+  "order.status4": "Completed",
+  "order.status5": "Cancelled",
+  "order.status6": "Invalid Order",
+  "cart.Inventory": "Inventory"
 }
