--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -13,8 +13,8 @@
   "selectlanguage.title": "Select Language",
   "search.title": "Search",
   "searchInput.placeholder": "Please Enter Keywords",
-  "searchTag.title": "Search History",
-  "searchTag.clear": "Clear Search History",
+  "searchTag.title": "History",
+  "searchTag.clear": "Clear History",
   "tabList.tab1": "Home",
   "tabList.tab2": "Cart",
   "tabList.tab3": "Mine",
@@ -64,8 +64,8 @@
   "addressDetail.delete.button2": "Confirm",
   "order.index.title": "Confirm Order",
   "order.index.address": "Please Select Shipping Address",
-  "order.index.message.title": "Order Remarks",
-  "order.index.message.placeholder": "Fill in Order Remarks",
+  "order.index.message.title": "Remarks",
+  "order.index.message.placeholder": "Fill in Remarks",
   "order.index.tag": "default",
   "order.index.total": "Total Amount",
   "order.index.amount": "Total {count} Items",
