--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -130,5 +130,7 @@
   "order.status4": "已完成",
   "order.status5": "已取消",
   "order.status6": "无效订单",
-  "cart.Inventory": "库存"
+  "cart.Inventory": "库存",
+  "spec.quantity": "购买数量",
+  "other.copySuccessTip": "复制成功"
 }
