--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -1,14 +1,19 @@
 {
-  "profile.tab1": "Clear Cache",
-  "profile.tab2": "Address",
-  "profile.tab3": "Language",
-  "profile.tab4": "Logout",
-  "profile.username": "UserName",
-  "order.tab1": "Pending Payment",
-  "order.tab2": "Pending Shipment",
-  "order.tab3": "Pending Receipt",
-  "order.tab4": "After-Sales Order",
-  "order.tab5": "All Orders",
+  "profile.tab1": "Favorites",
+  "profile.tab2": "Feedback",
+  "profile.tab3": "FAQ",
+  "profile.tab4": "Address",
+  "profile.tab5": "Support",
+  "profile.tab6": "About Us",
+  "profile.tab7": "Privacy Policy",
+  "profile.tab8": "Language",
+  "profile.tab9": "Logout",
+  "profile.username": "Not logged in",
+  "order.tab1": "Pay",
+  "order.tab2": "Ship",
+  "order.tab3": "Receive",
+  "order.tab4": "After-Sales",
+  "order.tab5": "All",
   "order.tab6": "All",
   "selectlanguage.title": "Select Language",
   "search.title": "Search",
@@ -16,8 +21,9 @@
   "searchTag.title": "History",
   "searchTag.clear": "Clear History",
   "tabList.tab1": "Home",
-  "tabList.tab2": "Cart",
-  "tabList.tab3": "Mine",
+  "tabList.tab2": "Order",
+  "tabList.tab3": "Cart",
+  "tabList.tab4": "Mine",
   "goodHeader.tab1": "Products",
   "goodHeader.tab2": "Details",
   "goodSpec.title": "Select",
