--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -1,9 +1,14 @@
 {
-  "profile.tab1": "清空缓存",
-  "profile.tab2": "收货地址",
-  "profile.tab3": "语言设置",
-  "profile.tab4": "退出登录",
-  "profile.username": "用户名",
+  "profile.tab1": "我的收藏",
+  "profile.tab2": "意见反馈",
+  "profile.tab3": "常见问题",
+  "profile.tab4": "收货地址",
+  "profile.tab5": "联系客服",
+  "profile.tab6": "关于我们",
+  "profile.tab7": "隐私协议",
+  "profile.tab8": "更换语言",
+  "profile.tab9": "退出登录",
+  "profile.username": "未登陆",
   "order.tab1": "待付款",
   "order.tab2": "待发货",
   "order.tab3": "待收货",
@@ -16,8 +21,9 @@
   "searchTag.title": "搜索历史",
   "searchTag.clear": "清除搜索历史",
   "tabList.tab1": "首页",
-  "tabList.tab2": "购物车",
-  "tabList.tab3": "我的",
+  "tabList.tab2": "订单",
+  "tabList.tab3": "购物车",
+  "tabList.tab4": "我的",
   "goodHeader.tab1": "商品",
   "goodHeader.tab2": "详情",
   "goodSpec.title": "选择",
