--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -74,12 +74,12 @@
   "order.index.message.title": "Remarks",
   "order.index.message.placeholder": "Fill in Remarks",
   "order.index.total": "Total Amount",
-  "order.index.amount": "Total {count} Items",
+  "order.index.amount": "Total {0} items",
   "order.index.sum": "Total:",
   "order.index.submit": "Submit",
   "order.list.title": "My Orders",
   "order.list.id": "Order No:",
-  "order.list.sum": "Total {count} Items, Actual Payment:",
+  "order.list.sum": "Total {count} items, Actual Payment:",
   "order.list.button1": "Details",
   "order.list.button2": "Cancel",
   "order.list.button3": "To Pay",
