--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -79,11 +79,11 @@
   "order.index.submit": "Submit",
   "order.list.title": "My Orders",
   "order.list.id": "Order No:",
-  "order.list.sum": "Total {count} items, Actual Payment:",
+  "order.list.sum": "Total {count} items",
   "order.list.button1": "Details",
   "order.list.button2": "Cancel",
   "order.list.button3": "To Pay",
-  "order.list.button4": "confirm the receipt of goods",
+  "order.list.button4": "Received",
   "order.list.button5": "buy again",
   "order.list.button6": "Delete",
   "order.confirm.text": "Please confirm receipt only after all packages have arrived.",
@@ -130,9 +130,9 @@
   "login.page.submit": "Submit",
   "other.finishedText": "No more data available.",
   "other.loadingText": "loading...",
-  "order.status1": "Pending Payment",
-  "order.status2": "Pending Shipment",
-  "order.status3": "Pending Receipt",
+  "order.status1": "Pay",
+  "order.status2": "Ship",
+  "order.status3": "Receive",
   "order.status4": "Completed",
   "order.status5": "Cancelled",
   "order.status6": "Invalid Order",
