--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -24,7 +24,7 @@
   "tabList.tab2": "Order",
   "tabList.tab3": "Cart",
   "tabList.tab4": "Mine",
-  "goodHeader.tab1": "Products",
+  "goodHeader.tab1": "Products Details",
   "goodHeader.tab2": "Details",
   "goodSpec.title": "Select",
   "goodSpec.tip": "Please select product specifications",
