--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -24,7 +24,7 @@
   "tabList.tab2": "订单",
   "tabList.tab3": "购物车",
   "tabList.tab4": "我的",
-  "goodHeader.tab1": "商品",
+  "goodHeader.tab1": "商品详情",
   "goodHeader.tab2": "详情",
   "goodSpec.title": "选择",
   "goodSpec.tip": "请选择商品规格",
