新增关于我们隐私协议页面

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -148,5 +148,7 @@
   "faq":"FAQ",
   "home.hot":"HOT",
   "home.recommend":"RECOMMEND",
-  "home.all":"All"
+  "home.all":"All",
+  "privacy":"Privacy Agreement",
+  "about":"About Us"
 }
