--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -148,5 +148,7 @@
   "faq":"常见问题",
   "home.hot":"畅销商品",
   "home.recommend":"热门推荐",
-  "home.all":"全部"
+  "home.all":"全部",
+  "privacy":"隐私协议",
+  "about":"关于我们"
 }
