--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -141,14 +141,20 @@
   "other.copySuccessTip": "Copied successfully",
   "cart.Quantity": "Quantity",
   "cart.emptyText": "My shopping cart is empty, go check it out!",
-  "feedback.title":"Feedback",
-  "feedback.placeholder":"Please enter your valuable feedback...",
-  "feedback.submit":"Submit",
-  "feedback.success":"Thank you for your feedback!",
-  "faq":"FAQ",
-  "home.hot":"HOT",
-  "home.recommend":"RECOMMEND",
-  "home.all":"All",
-  "privacy":"Privacy Agreement",
-  "about":"About Us"
+  "feedback.title": "Feedback",
+  "feedback.placeholder": "Please enter your valuable feedback...",
+  "feedback.submit": "Submit",
+  "feedback.success": "Thank you for your feedback!",
+  "faq": "FAQ",
+  "home.hot": "HOT",
+  "home.recommend": "RECOMMEND",
+  "home.all": "All",
+  "privacy": "Privacy Agreement",
+  "about": "About Us",
+  "loginAndRegister.CustomName.tips1": "Please enter your email address",
+  "loginAndRegister.CustomName.tips2": "* Enter your email address",
+  "loginAndRegister.CustomName.tips3": "Please enter in your email address",
+  "loginAndRegister.Password.tips1": "* Enter your email address",
+  "loginAndRegister.Password.tips2": "* Incorrect password format",
+  "loginAndRegister.Password.tips3": "Please enter your password"
 }
