--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -141,14 +141,20 @@
   "other.copySuccessTip": "复制成功",
   "cart.Quantity": "购买数量",
   "cart.emptyText": "购物车空空如也,快去逛逛吧~",
-  "feedback.title":"意见反馈",
-  "feedback.placeholder":"请输入您的宝贵意见...",
-  "feedback.submit":"提交",
-  "feedback.success":"感谢您的反馈！",
-  "faq":"常见问题",
-  "home.hot":"畅销商品",
-  "home.recommend":"热门推荐",
-  "home.all":"全部",
-  "privacy":"隐私协议",
-  "about":"关于我们"
+  "feedback.title": "意见反馈",
+  "feedback.placeholder": "请输入您的宝贵意见...",
+  "feedback.submit": "提交",
+  "feedback.success": "感谢您的反馈！",
+  "faq": "常见问题",
+  "home.hot": "畅销商品",
+  "home.recommend": "热门推荐",
+  "home.all": "全部",
+  "privacy": "隐私协议",
+  "about": "关于我们",
+  "loginAndRegister.CustomName.tips1": "请输入您的电子邮件地址",
+  "loginAndRegister.CustomName.tips2": "* 输入您的电子邮件地址",
+  "loginAndRegister.CustomName.tips3": "请填写邮箱",
+  "loginAndRegister.Password.tips1": "* 输入您的电子邮件地址",
+  "loginAndRegister.Password.tips2": "* 密码格式不正确",
+  "loginAndRegister.Password.tips3": "请填写密码"
 }
